# CooperBench

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml  lint.yml  pre-commit.yml
dataset/: README.md  gold_conflict_report.json
dataset/dottxt_ai_outlines_task/task1706/: Dockerfile  runner.sh
dataset/dspy_task/task8394/feature6/: feature.md  feature.patch  tests.patch
dataset/dspy_task/task8394/feature6/resolution_patches/: vs_feature4.patch  vs_feature5.patch
dataset/dspy_task/task8394/feature7/: feature.md  feature.patch  tests.patch
dataset/dspy_task/task8394/feature7/resolution_patches/: vs_feature4.patch  vs_feature5.patch  vs_feature6.patch
dataset/dspy_task/task8563/feature2/: tests.patch
dataset/dspy_task/task8563/feature3/: tests.patch
dataset/dspy_task/task8563/feature4/: tests.patch
dataset/dspy_task/task8563/feature5/: tests.patch
dataset/dspy_task/task8563/feature6/: tests.patch
dataset/go_chi_task/task26/: Dockerfile
dataset/go_chi_task/task56/: Dockerfile
dataset/huggingface_datasets_task/task7309/: Dockerfile  runner.sh
dataset/pallets_click_task/task2068/feature13/: feature.md  feature.patch  tests.patch
dataset/pallets_click_task/task2068/feature13/resolution_patches/: vs_feature1.patch  vs_feature10.patch  vs_feature11.patch  vs_feature2.patch  vs_feature5.patch  vs_feature6.patch  vs_feature8.patch
dataset/pallets_jinja_task/task1621/feature1/: feature.filtered.patch
dataset/pallets_jinja_task/task1621/feature2/: feature.filtered.patch
dataset/react_hook_form_task/task153/: Dockerfile
dataset/react_hook_form_task/task85/: Dockerfile
dataset/subsets/: lite.json  spark.json
dataset/typst_task/task6554/: Dockerfile  run_tests.sh  runner.sh  setup.sh
dataset/typst_task/task6554/feature1/: feature.md  feature.patch
dataset/typst_task/task6554/feature10/: feature.md  feature.patch
dataset/typst_task/task6554/feature2/: feature.md  feature.patch
dataset/typst_task/task6554/feature3/: feature.md  feature.patch
dataset/typst_task/task6554/feature4/: feature.md  feature.patch
dataset/typst_task/task6554/feature5/: feature.md  feature.patch
dataset/typst_task/task6554/feature6/: feature.md  feature.patch
dataset/typst_task/task6554/feature7/: feature.md  feature.patch
dataset/typst_task/task6554/feature8/: feature.md  feature.patch
dataset/typst_task/task6554/feature9/: feature.md  feature.patch
docs/: GCP_SETUP.md  index.md  phase3_plan.md  phase3b_plan.md
docs/concepts/: design.md  overview.md  settings.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: evaluation.md  execution.md  planning.md
scripts/: __init__.py  check_gold_conflicts.py  list_images.sh  push_images.sh  run_benchmark.sh  test_model.py
src/cooperbench/: __about__.py  __init__.py  cli.py  config.py  runner.py  utils.py
src/cooperbench/agents/: README.md  __init__.py  pricing.py  registry.py
src/cooperbench/agents/_coop/: prompt.py
src/cooperbench/agents/_team/: __init__.py  coop_task.py  install_snippet.sh  prompt.py  runtime.py
src/cooperbench/agents/claude_code/: __init__.py  adapter.py  parsers.py  setup.sh
src/cooperbench/agents/codex/: adapter.py
src/cooperbench/agents/mini_swe/: __init__.py  adapter.py
src/cooperbench/agents/mini_swe/agents/: __init__.py  default.py
src/cooperbench/agents/mini_swe/connectors/: __init__.py  git.py
src/cooperbench/agents/mini_swe/environments/: __init__.py  modal.py
src/cooperbench/agents/mini_swe/models/: __init__.py  litellm_model.py
src/cooperbench/agents/mini_swe/utils/: log.py
src/cooperbench/agents/mini_swe_agent/: adapter.py
src/cooperbench/agents/mini_swe_agent/config/: mini.yaml
src/cooperbench/agents/mini_swe_agent/environments/: __init__.py  docker.py  gcp.py  modal.py
src/cooperbench/agents/mini_swe_agent_v2/: __init__.py  adapter.py
src/cooperbench/agents/mini_swe_agent_v2/agents/: __init__.py  default.py
src/cooperbench/agents/mini_swe_agent_v2/config/: coop.yaml  mini.yaml  solo.yaml
src/cooperbench/agents/mini_swe_agent_v2/connectors/: __init__.py  git.py
src/cooperbench/agents/mini_swe_agent_v2/environments/: __init__.py  docker.py  modal.py
src/cooperbench/agents/mini_swe_agent_v2/models/: __init__.py  litellm_model.py
src/cooperbench/agents/mini_swe_agent_v2/utils/: log.py
src/cooperbench/agents/openhands_agent_sdk/: README.md  VERSION  __init__.py  adapter.py  test_modal_simple.py  utils.py
src/cooperbench/agents/openhands_agent_sdk/connectors/: __init__.py  git_server.py  redis_server.py
src/cooperbench/agents/openhands_agent_sdk/docker/: Dockerfile.agent-server  (+3 more)
src/cooperbench/agents/swe_agent/: adapter.py
src/cooperbench/core/: __init__.py  config.py  git.py  huggingface.py  interface.py  logger.py  merge.py  patch.py  paths.py  settings.py
src/cooperbench/eval/: evaluate.py  runs.py  sandbox.py
src/cooperbench/eval/backends/: __init__.py  docker.py  gcp.py
src/cooperbench/evaluation/: __init__.py  evaluate.py  test_runner.py
src/cooperbench/execution/: __init__.py  execute.py
src/cooperbench/generation/: README.md  __init__.py  __main__.py  collect.py  controller.py  convert_swesmith.py  decompose.py  expand.py  generator.py  onboard.py  pipeline.py  prompt.py  resolve.py  splitter.py  validator.py  verify.py
src/cooperbench/llm/: __init__.py  client.py
src/cooperbench/planning/: __init__.py  agent.py  coop.py  plan.py  single.py  solo.py  tools.py  trajectory.py
src/cooperbench/planning/templates/: __init__.py  coop.j2  single.j2  solo.j2
src/cooperbench/runner/: coop.py  core.py  solo.py  tasks.py
src/cooperbench/serve/: __init__.py
tests/: test_cli.py  test_package.py
tests/agents/: test_registry.py  test_team_wiring.py
tests/agents/_team/: test_prompt.py  test_runtime.py
tests/agents/claude_code/: test_adapter.py  test_parsers.py
tests/eval/: test_runs.py  test_sandbox.py
tests/integration/: test_gcp_environment.py
tests/runner/: test_coop.py  test_tasks.py
(+37 files in other folders)
