[project]
name = "cooperbench"
description = "Multi-agent coordination benchmark for collaborative code generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dynamic = ["version"]
authors = [
    {name = "Arpandeep Khatua"},
    {name = "Hao Zhu"},
    {name = "Peter Tran"},
    {name = "Arya Prabhudesai"},
    {name = "Frederic Sadrieh"},
    {name = "Johann K. Lieberwirth"},
    {name = "Xinkai Yu"},
    {name = "Yicheng Fu"},
    {name = "Michael J. Ryan"},
    {name = "Jiaxin Pei"},
    {name = "Diyi Yang"},
]
keywords = [
    "benchmark",
    "multi-agent",
    "llm",
    "code-generation",
    "collaboration",
    "coordination",
    "ai-agents",
    "software-engineering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "huggingface-hub>=0.20",
    "tenacity>=8.0",
    "docker>=7.0",
]

[project.optional-dependencies]
llm = [
    "litellm>=1.0",
    "anthropic>=0.30",
    "openai>=1.0",
]
execution = [
    "openhands-ai",
]
serve = [
    "modal",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
]
all = ["cooperbench[llm,execution,serve,dev]"]

[project.scripts]
cooperbench = "cooperbench.cli:main"

[project.urls]
Homepage = "https://cooperbench.com"
Documentation = "https://cooperbench.com"
Repository = "https://github.com/cooperbench/CooperBench"
Issues = "https://github.com/cooperbench/CooperBench/issues"
Dataset = "https://huggingface.co/datasets/cooperbench/cooperbench"
Paper = "https://arxiv.org/abs/2601.13295"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cooperbench/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "dataset/",
    "logs/",
    "docs/",
    "scripts/",
    ".github/",
    "src/cooperbench/execution/openhands_colab/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cooperbench"]
exclude = [
    "src/cooperbench/execution/openhands_colab/",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["src/cooperbench/execution/openhands_colab/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["cooperbench"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
disable_error_code = ["override", "misc", "no-any-return", "arg-type", "call-arg", "operator", "assignment", "call-overload", "index", "import-untyped", "dict-item"]
exclude = ["tests/", "openhands_colab/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/cooperbench"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
